fix #1836 large accent values overflow

--- a/web/src/components/pages/datasets/dataset-info.css
+++ b/web/src/components/pages/datasets/dataset-info.css
@@ -193,6 +193,15 @@
                     flex-direction: row;
                     white-space: pre;
 
+                    @media (--md-down) {
+                        width: 100%;
+
+                        & .ellipsis {
+                            overflow: hidden;
+                            text-overflow: ellipsis;
+                        }
+                    }
+
                     &::after {
                         content: ', ';
                     }
